--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
